@@ -1623,14 +1623,15 @@ result_workers
 </dt>
 <dd>
 <p>
-Number of result worker threads. Usually one is enough. You may increase the
-value if your result queue is not processed fast enough.
+Enable or disable result worker thread. The default is one, but
+you can set it to zero to disabled result workers, for example
+if you only want to export performance data.
 </p>
 <div class="exampleblock">
 <div class="content">
 <div class="literalblock">
 <div class="content">
-<pre><code>result_workers=3</code></pre>
+<pre><code>result_workers=0</code></pre>
 </div></div>
 </div></div>
 </dd>
@@ -2846,8 +2847,7 @@ Make sure all your worker have the Nagios-Plugins available under
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated
- 2015-08-28 15:23:43 CEST
+Last updated 2015-09-10 18:20:23 CEST
 </div>
 </div>
 </body>
